bin_PROGRAMS = snort
snort_SOURCES = snort.c snort.h log.c log.h decode.c decode.h mstring.h mstring.c rules.c rules.h plugbase.c plugbase.h sp_pattern_match.c sp_pattern_match.h sp_tcp_flag_check.c sp_tcp_flag_check.h sp_icmp_type_check.c sp_icmp_type_check.h sp_icmp_code_check.c sp_icmp_code_check.h sp_ttl_check.c sp_ttl_check.h sp_ip_id_check.c sp_ip_id_check.h sp_tcp_ack_check.c sp_tcp_ack_check.h sp_tcp_seq_check.c sp_tcp_seq_check.h sp_dsize_check.c sp_dsize_check.h spp_http_decode.h spp_http_decode.c spp_minfrag.c spp_minfrag.h sp_ipoption_check.h sp_ipoption_check.c
EXTRA_DIST = BUGS RULES.SAMPLE CREDITS snort-lib USAGE overflow-lib misc-lib scan-lib web-lib backdoor-lib templates/sp_template.c templates/sp_template.h templates/spp_template.h templates/spp_template.c README.PLUGINS
INCLUDES = @extra_incl@


